--- a/src/app/pages/products/add-product-page/add-product-page.page.html
+++ b/src/app/pages/products/add-product-page/add-product-page.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
 
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/product-page"></ion-back-button>
+      <ion-back-button defaultHref="/tabs/product-page"></ion-back-button>
     </ion-buttons>
 
     <ion-buttons slot="end">
