--- a/src/app/pages/products/product-page/product-page.page.html
+++ b/src/app/pages/products/product-page/product-page.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
 
     <ion-buttons slot="end">
-      <ion-button fill="clear" [routerLink]="['/add-product-page']">
+      <ion-button fill="clear" [routerLink]="['/tabs/add-product-page']">
         <ion-icon slot="icon-only" name="add-circle-outline" padding=10px></ion-icon>
       </ion-button>
     </ion-buttons>
