--- a/src/app/admin/control/control.page.html
+++ b/src/app/admin/control/control.page.html
@@ -19,6 +19,8 @@
 		Customer Chats
 	</ion-button>
 
-
+  <ion-button color="primary" expand="block" [routerLink]='["/add-product-page"]'>
+		Add Products
+	</ion-button>
 
 </ion-content>
