--- a/src/app/pages/products/product-page/product-page.page.html
+++ b/src/app/pages/products/product-page/product-page.page.html
@@ -1,12 +1,5 @@
 <ion-header>
   <ion-toolbar>
-
-    <ion-buttons slot="end">
-      <ion-button fill="clear" [routerLink]="['/tabs/add-product-page']">
-        <ion-icon slot="icon-only" name="add-circle-outline" padding=10px></ion-icon>
-      </ion-button>
-    </ion-buttons>
-  
     <ion-title >Products</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -24,15 +17,16 @@
 
     <ion-list>
       <ion-item>
-        <ion-select #productcat placeholder="Filter By Category" (ionChange)="filterData(productcat.value)" >
+        <ion-select #productcat placeholder="Filter By Category" (ionChange)="filterData(productcat.value)">
           <ion-select-option value="Computer">Computer</ion-select-option>
-          <ion-select-option value="clothes">Clothes</ion-select-option>
+          <ion-select-option value="Clothes">Clothes</ion-select-option>
           <ion-select-option value="Shoe">Shoe</ion-select-option>
         </ion-select>
       </ion-item>
     </ion-list>
 
     <ion-item *ngFor="let product of filteredproducts">
+      <ion-col size="12" width="100%">
 
       <img src="{{ product.productImage }}" class="image-size"/>
 
@@ -68,7 +62,9 @@
           </ion-row>
         </ion-card-content>
       </ion-card>
+    </ion-col>
     </ion-item>
+  </ion-list>
 
     <ion-fab vertical="bottom" horizontal="end" slot="fixed">
       <ion-fab-button (click)="addProduct()">
@@ -76,5 +72,4 @@
       </ion-fab-button>
     </ion-fab>
 
-  </ion-list>
 </ion-content>
