--- a/src/app/pages/products/add-productbanner-page/add-productbanner-page.page.html
+++ b/src/app/pages/products/add-productbanner-page/add-productbanner-page.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/tabs/add-product-page"></ion-back-button>
+      <ion-back-button defaultHref="/add-product-page"></ion-back-button>
     </ion-buttons>
     <ion-title>Add Product Banner</ion-title>
   </ion-toolbar>
