advert specific product page

--- a/src/app/modals/adv-detail/adv-detail.page.html
+++ b/src/app/modals/adv-detail/adv-detail.page.html
@@ -68,5 +68,10 @@
     <ion-icon name="trash" slot="start"></ion-icon>
     Delete
   </ion-button>
+
+  <ion-button expand="block" color="primary" (click)="addProducts()">
+    <ion-icon name="trash" slot="start"></ion-icon>
+    Add Products
+  </ion-button>
  
 </ion-content>
