--- a/src/app/admin/control/control.page.html
+++ b/src/app/admin/control/control.page.html
@@ -19,6 +19,10 @@
 		Customer Chats
 	</ion-button>
 
+  <ion-button color="primary" expand="block" [routerLink]='["/reward-add"]'>
+    Add Reward
+  </ion-button>
+
 
 
 </ion-content>
