--- a/src/app/pages/rewards/reward-page/reward-page.page.scss
+++ b/src/app/pages/rewards/reward-page/reward-page.page.scss
@@ -2,10 +2,17 @@ ion-col {
   text-align: center;
   padding: 15px;
 }
+p{
+  font-size: large;
+}
 .image-size{
   width: 500px;
   height: 500px;
 }
 label{
   font-weight: bolder;
+  font-size: larger;
+}
+button{
+    font-size: larger;
 }
