--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -12,8 +12,13 @@
     </ion-tab-button>
 
     <ion-tab-button tab="product-page">
-      <ion-icon name="square"></ion-icon>
+      <ion-icon name="bag-handle-outline"></ion-icon>
       <ion-label>Products</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="cart-page">
+      <ion-icon name="cart-outline"></ion-icon>
+      <ion-label>Cart</ion-label>
     </ion-tab-button>
 
       <ion-tab-button tab="reward-page">
