--- a/src/app/pages/products/product-page/product-page.page.html
+++ b/src/app/pages/products/product-page/product-page.page.html
@@ -67,7 +67,7 @@
   </ion-list>
 
     <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-      <ion-fab-button (click)="addProduct()">
+      <ion-fab-button [routerLink]="['/add-cart-page']">
         <ion-icon name="cart"></ion-icon>
       </ion-fab-button>
     </ion-fab>
