--- a/src/app/pages/cart/add-cart-page/add-cart-page.page.html
+++ b/src/app/pages/cart/add-cart-page/add-cart-page.page.html
@@ -10,13 +10,13 @@
 <ion-content class="ion-padding">
 
   <ion-item>
-    <ion-input [(ngModel)]="cart.productName" placeholder="Name"></ion-input>
+    <ion-input [(ngModel)]="cart.productName" placeholder="Product Name"></ion-input>
   </ion-item>
   <ion-item>
-    <ion-input [(ngModel)]="cart.productPrice" placeholder="Price"></ion-input>
+    <ion-input [(ngModel)]="cart.productPrice" placeholder="Product Price"></ion-input>
   </ion-item>
   <ion-item>
-    <ion-input [(ngModel)]="cart.Quantity" placeholder="Quantity"></ion-input>
+    <ion-input [(ngModel)]="cart.Quantity" placeholder="Product Quantity"></ion-input>
   </ion-item>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
