--- a/src/app/pages/products/product-page/product-page.page.html
+++ b/src/app/pages/products/product-page/product-page.page.html
@@ -21,6 +21,9 @@
           <ion-select-option value="Computer">Computer</ion-select-option>
           <ion-select-option value="Clothes">Clothes</ion-select-option>
           <ion-select-option value="Shoe">Shoe</ion-select-option>
+          <ion-select-option value="Home Appliance">Home Appliance</ion-select-option>
+          <ion-select-option value="Phone">Phone</ion-select-option>
+          
         </ion-select>
       </ion-item>
     </ion-list>
