--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -29,14 +29,9 @@
   </ion-list>
 
   <ion-content class="ion-padding">
-<<<<<<< Updated upstream
-    <ion-button (click)="addExpense()" expand="block">Add Expense</ion-button>
-    <ion-button id="open-modal" expand="block">Personal Expenses</ion-button>
-=======
     <ion-button id="open-modal-expense" (click)="calcTotalExpense()" (click)="checkSavings()" expand="block">Personal Expenses</ion-button>
->>>>>>> Stashed changes
     <ion-modal
-    trigger="open-modal"
+    trigger="open-modal-expense"
     [initialBreakpoint]="0.25"
     [breakpoints]="[0, 0.25, 0.5, 0.75, 1]"
     handleBehavior="cycle"
