Reverted Changes from S

--- a/src/app/admin/control/control.page.html
+++ b/src/app/admin/control/control.page.html
@@ -21,6 +21,10 @@
 
   <ion-button color="primary" expand="block" [routerLink]='["/add-product-page"]'>
 		Add Products
-	</ion-button>
+	</ion-button>  <ion-button color="primary" expand="block" [routerLink]='["/reward-add"]'>
+    Add Reward
+  </ion-button>
+
+
 
 </ion-content>
