--- a/src/app/budget/set-budget/set-budget.page.html
+++ b/src/app/budget/set-budget/set-budget.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Set Budget</ion-title>
+    <ion-title>Update Budget</ion-title>
     <ion-buttons slot="end">
       <ion-button color="danger" (click)="dismiss()">
         <ion-icon slot="icon-only" name="close-circle-sharp"></ion-icon>
