--- a/src/app/authentication/login/login.page.html
+++ b/src/app/authentication/login/login.page.html
@@ -5,6 +5,8 @@
   </ion-header>
   
   <ion-content class="ion-padding">
+
+	<img src="assets/R.png">
   
 	<form (ngSubmit)="login()" [formGroup]="credentialsForm">
 	  <ion-item>
