--- a/src/app/modals/adv-detail/adv-detail.page.html
+++ b/src/app/modals/adv-detail/adv-detail.page.html
@@ -73,5 +73,10 @@
     <ion-icon name="trash" slot="start"></ion-icon>
     Add Products
   </ion-button>
+
+  <ion-button expand="block" color="secondary" (click)="toProd()">
+    <ion-icon name="trash" slot="start"></ion-icon>
+    Product List
+  </ion-button>
  
 </ion-content>
