--- a/src/app/pages/adverts/advertiser-product/advertiser-product.page.html
+++ b/src/app/pages/adverts/advertiser-product/advertiser-product.page.html
@@ -1,9 +1,35 @@
-<ion-header>
+<ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>advertiser-product</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-button slot="end" fill="clear" [routerLink]="['/overview']">
+      <ion-icon slot="icon-only" name="chatbubbles-outline" padding=10px [routerLink]="['/overview']"></ion-icon>
+    </ion-button>
+
+    <ion-title class="ion-text-center">Products</ion-title>
+
+    <!-- <ion-button slot='end' fill='clear' (click)="logout()">
+      <ion-icon name="exit-outline" slot="icon-only"></ion-icon>
+    </ion-button> -->
+
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content [fullscreen]="true">
+  
 
+   <ion-item *ngFor="let product of products" >
+    <ion-card>
+        <ion-img [src]="product.file"></ion-img>
+        <ion-card-header>
+          <ion-card-title>{{ product.name }}</ion-card-title>
+          
+        </ion-card-header>
+        <ion-card-content>
+          {{ product.desc }}
+        </ion-card-content>
+      </ion-card>
+  </ion-item>
+    
 </ion-content>
