--- a/src/app/pages/products/add-product-page/add-product-page.page.html
+++ b/src/app/pages/products/add-product-page/add-product-page.page.html
@@ -65,7 +65,7 @@
     </ion-item>
 
     <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-      <ion-fab-button (click)="addProduct()">
+      <ion-fab-button (click)="addproduct()">
         <ion-icon name="Add"></ion-icon>
       </ion-fab-button>
     </ion-fab>
