Update Validations in Cart

--- a/src/app/modals/modal-cart/modal-cart.page.html
+++ b/src/app/modals/modal-cart/modal-cart.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>modal-cart</ion-title>
+    <ion-title>Edit Cart</ion-title>
   </ion-toolbar>
 </ion-header>
 
