--- a/src/app/pages/cart/add-cart-page/add-cart-page.page.html
+++ b/src/app/pages/cart/add-cart-page/add-cart-page.page.html
@@ -20,7 +20,7 @@
   </ion-item>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button color="success" (click)="save()" [disabled]="cart.productName == '' && cart.productPrice == '' && cart.Quantity == '' ">
+    <ion-fab-button color="success" (click)="save()" [disabled]="cart.productName == '' || cart.productPrice == '' || cart.Quantity == '' ">
       <ion-icon name="checkmark"></ion-icon>
     </ion-fab-button>
   </ion-fab> 
