--- a/src/app/pages/products/add-productbanner-page/add-productbanner-page.page.html
+++ b/src/app/pages/products/add-productbanner-page/add-productbanner-page.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/add-product-page"></ion-back-button>
     </ion-buttons>
-    <ion-title>Add Product Banner</ion-title>
+    <ion-title>Add Banner</ion-title>
   </ion-toolbar>
 </ion-header>
 
