pre presentation push

--- a/src/app/authentication/login/login.page.html
+++ b/src/app/authentication/login/login.page.html
@@ -6,7 +6,7 @@
   
   <ion-content class="ion-padding">
 
-	<img src="assets/R.png">
+	<img src="assets/R2.png">
   
 	<form (ngSubmit)="login()" [formGroup]="credentialsForm">
 	  <ion-item>
